--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2004-03-16  Shaun McCance  <shaunm@gnome.org>
+
+	* configure.in:
+	- Version 2.5.91
+
+	* po/*.po:
+	- Stuff distcheck likes to do
+
 2004-03-15  Shaun McCance  <shaunm@gnome.org>
 
 	* src/yelp-window.c:
