--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,20 @@
+Changes in 2.5.91:
+------------------
+* Fix for #137216, infinite loop in tree traversal.    (Shaun McCance)
+* Updated translations:
+  be      (Ales Nyakhaychyk)
+  bn      (Sayamindu Dasgupta)
+  da      (Ole Laursen)
+  el      (Nikos Charonitakis)
+  en_CA   (Alexander Winston)
+  ga      (Alastair McKinstry)
+  nn      (Åsmund Skjæveland)
+  pt_BR   (Estêvão Samuel Procópio)
+  sr      (Danilo Šegan)
+  sr@Latn (Danilo Šegan)
+  th      (Paisa Seeluangsawat)
+  uk      (Maxim Dziumanenko)
+
 Changes in 2.5.90:
 ------------------
 * Fixed problem where documents in certain categories weren't
