--- a/po/it.po
+++ b/po/it.po
@@ -5,7 +5,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: yelp\n"
-"POT-Creation-Date: 2004-03-09 03:31-0600\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2004-03-16 23:31-0600\n"
 "PO-Revision-Date: 2004-02-26 15:31+0100\n"
 "Last-Translator: Psyk[o] <shaihulud@supereva.it>\n"
 "Language-Team: Italian <tp@lists.linux.it>\n"
