--- a/po/en_CA.po
+++ b/po/en_CA.po
@@ -6,8 +6,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: yelp 2.5.90\n"
-"Report-Msgid-Bugs-To: <http://bugzilla.gnome.org/enter_bug.cgi?product=l10n&component=Canadian+English+%5Ben_CA%5D>\n"
-"POT-Creation-Date: 2004-03-09 22:01-0500\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2004-03-16 23:31-0600\n"
 "PO-Revision-Date: 2004-03-09 22:18-0500\n"
 "Last-Translator: Alexander Winston <alexander.winston@comcast.net>\n"
 "Language-Team: Canadian English <adamw@FreeBSD.org>\n"
