--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-03-17  Miloslav Trmac  <mitr@volny.cz>
+
+	* cs.po: Fixed entity translations.
+
 2004-03-16  Åsmund Skjæveland  <aasmunds@fys.uio.no>
 
 	* nn.po: Updated Norwegian Nynorsk translation.
