--- a/po/cs.po
+++ b/po/cs.po
@@ -396,19 +396,19 @@ msgstr "Prohlížeč nápovědy pro GNOME"
 
 #: stylesheets/l10n.xml.in.h:1
 msgid "&#8216;"
-msgstr "&#8216;"
+msgstr "‘"
 
 #: stylesheets/l10n.xml.in.h:2
 msgid "&#8217;"
-msgstr "&#8217;"
+msgstr "’"
 
 #: stylesheets/l10n.xml.in.h:3
 msgid "&#8220;"
-msgstr "&#8222;"
+msgstr "„"
 
 #: stylesheets/l10n.xml.in.h:4
 msgid "&#8221;"
-msgstr "&#8221;"
+msgstr "”"
 
 #: stylesheets/l10n.xml.in.h:5
 msgid "About This Article"
