--- a/po/ar.po
+++ b/po/ar.po
@@ -10,13 +10,13 @@ msgid ""
 msgstr ""
 "Project-Id-Version: yelp\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-03-16 23:31-0600\n"
-"PO-Revision-Date: 2004-02-04 15:38+0100\n"
+"POT-Creation-Date: 2004-03-17 04:23+0100\n"
+"PO-Revision-Date: 2004-03-17 13:23+0100\n"
 "Last-Translator: Arafat Medini <lumina@silverpen.de>\n"
 "Language-Team: Arabic <doc@arabeyes.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: 8bit\n"
+"Content-Transfer-Encoding: 8bit"
 
 #: data/toc.xml.in.h:1
 msgid "Applets"
@@ -387,10 +387,12 @@ msgstr "جاري التحميل..."
 #. * will shop up in the "about" box
 #: src/yelp-window.c:1300
 msgid "translator_credits"
-msgstr ""
-"تحت إشراف عرب آيز (http://www.arabeyes.org):عرفات المديني، تونس "
-"<lumina@silverpen.de>محمد جمال، مصر محمد عصر، مصر سيد جعفر الموسوي، البحرين، "
-"عصام بيازيدي، الأردن نور الدين أمين آغة، العربية السعودية "
+msgstr "عرفات المديني، تونس <lumina@silverpen.de>"
+"محمد جمال، مصر "
+" محمد عصر، مصر "
+" سيد جعفر الموسوي، البحرين، "
+"عصام بيازيدي، الأردن "
+" نور الدين أمين آغة، العربية السعودية "
 
 #: src/yelp-window.c:1306
 msgid "A Help Browser for GNOME"
@@ -623,7 +625,7 @@ msgstr "قسم المرجع"
 
 #: stylesheets/l10n.xml.in.h:59
 msgid "Release Information"
-msgstr ""
+msgstr "معلومات النشر"
 
 #: stylesheets/l10n.xml.in.h:60
 msgid "Revision History"
