--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2004-03-21  Danilo Šegan  <dsegan@gmx.net>
+
+	* sr.po, sr@Latn.po: Serbian translation reviewed by 
+	Slobodan Sredojević <ssl@uns.ns.ac.yu>.
+
 2004-03-20  Gareth Owen  <gowen72@yahoo.com>
 
 	* en_GB.po: Added British translation
