--- a/po/sr@Latn.po
+++ b/po/sr@Latn.po
@@ -4,15 +4,16 @@
 # This file is distributed under the same license as the yelp package.
 #
 # Maintainer: Goran Rakić <gox@devbase.net>
+# Reviewed on 2004-03-20 by: Slobodan Sredojević <ssl@uns.ns.ac.yu>
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: yelp 2.6\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-03-16 23:31-0600\n"
-"PO-Revision-Date: 2004-03-11 19:51+0100\n"
-"Last-Translator: Goran Rakić <gox@devbase.net>\n"
-"Language-Team: Serbian (sr) <serbiangnome-lista@nongnu.org>\n"
+"POT-Creation-Date: 2004-03-21 07:34+0100\n"
+"PO-Revision-Date: 2004-03-21 07:34+0100\n"
+"Last-Translator: Slobodan Sredojević <ssl@uns.ns.ac.yu>\n"
+"Language-Team: Serbian (sr) <gnom@prevod.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -111,19 +112,19 @@ msgstr "Bitna je _veličina slova"
 
 #: data/ui/yelp.glade.h:3
 msgid "Find"
-msgstr "Nađi"
+msgstr "Pretraga teksta"
 
 #: data/ui/yelp.glade.h:4
 msgid "_Find: "
-msgstr "_Nađi:"
+msgstr "Tr_aži: "
 
 #: data/ui/yelp.glade.h:5
 msgid "_Next"
-msgstr "Naredno"
+msgstr "_Naredno"
 
 #: data/ui/yelp.glade.h:6
 msgid "_Previous"
-msgstr "Prethodno"
+msgstr "_Prethodno"
 
 #: data/ui/yelp.glade.h:7
 msgid "_Wrap around"
@@ -131,11 +132,11 @@ msgstr "U _krug"
 
 #: src/GNOME_Yelp.server.in.h:1
 msgid "Yelp"
-msgstr "Jelp"
+msgstr "Preglednik pomoći"
 
 #: src/GNOME_Yelp.server.in.h:2
 msgid "Yelp Factory"
-msgstr "Jelp fabrika"
+msgstr "Fabrika preglednika pomoći"
 
 #: src/yelp-db-pager.c:435 src/yelp-man-pager.c:301
 msgid "No href attribute found on yelp:document"
@@ -147,7 +148,7 @@ msgstr "Ponestalo memorije"
 
 #: src/yelp-db-pager.c:638 src/yelp-man-pager.c:370
 msgid "Titlepage"
-msgstr "Naslovnica"
+msgstr "Naslov"
 
 #: src/yelp-db-pager.c:640 stylesheets/l10n.xml.in.h:30
 #: src/yelp-man-pager.c:372
@@ -161,7 +162,7 @@ msgstr "Nepoznato"
 
 #: src/yelp-error.c:46
 msgid "The selected document could not be opened"
-msgstr "Ne može se otvoriti izabrani dokument"
+msgstr "Izabrani dokument nije mogao biti otvoren"
 
 #: src/yelp-error.c:52
 msgid "The selected page could not be found in this document."
@@ -186,7 +187,7 @@ msgstr "Definiši koji direktorijum da koristi za privremeni smeštaj"
 #: src/yelp-main.c:128
 #, c-format
 msgid "Could not activate Yelp: '%s'"
-msgstr "Nisam mogao da aktivitam Jelp: „%s“"
+msgstr "Nisam mogao da aktiviram preglednika pomoći: „%s“"
 
 #: src/yelp-main.c:147
 msgid "Could not open new window."
@@ -231,7 +232,7 @@ msgstr "Funkcije biblioteka"
 
 #: src/yelp-man.c:374
 msgid "Kernel Routines"
-msgstr "Rutine jezgra"
+msgstr "Potprogrami jezgra"
 
 #: src/yelp-man.c:439
 msgid "Hardware Devices"
@@ -308,7 +309,7 @@ msgstr "/Uređivanje/Nađi p_rethodno"
 
 #: src/yelp-window.c:268
 msgid "/_Go"
-msgstr "/_Idi"
+msgstr "/_Strana"
 
 #: src/yelp-window.c:269
 msgid "/Go/_Back"
@@ -414,7 +415,7 @@ msgstr "“"
 
 #: stylesheets/l10n.xml.in.h:5
 msgid "About This Article"
-msgstr "O ovom članku"
+msgstr "O ovom uputstvu"
 
 #: stylesheets/l10n.xml.in.h:6
 msgid "About This Bibliography"
@@ -422,7 +423,7 @@ msgstr "O ovoj literaturi"
 
 #: stylesheets/l10n.xml.in.h:7
 msgid "About This Book"
-msgstr "O ovom knjizi"
+msgstr "O ovoj knjizi"
 
 #: stylesheets/l10n.xml.in.h:8
 msgid "About This Chapter"
