--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2004-03-21  Wang Jian  <lark@linux.net.cn>
+
+	* zh_CN.po: Updated Simplified Chinese translation by
+	jan2xue <75jan@163.com>.
+
 2004-03-21  Danilo Šegan  <dsegan@gmx.net>
 
 	* sr.po, sr@Latn.po: Serbian translation reviewed by 
