--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-03-21  Shaun McCance  <shaunm@gnome.org>
+
+	* configure.in:
+	- Patch from Laszlo Peter for #134534, portable sed usage
+
 2004-03-20  Gareth Owen  <gowen72@yahoo.com>
 
 	* configure.in: Added en_GB to ALL_LINGUAS
