--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2004-03-22  Shaun McCance  <shaunm@gnome.org>
+
+	* configure.in:
+	- Version 2.6.0
+
+	* po/*.po:
+	- Stuff distcheck likes to do
+
 2004-03-22  Guntupalli Karunakar  <karunakar@freedomink.org>
 
         * configure.in: Added "pa" (Punjabi) to ALL_LINGUAS.
