--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,18 @@
+Changes in 2.6.0:
+-----------------
+* Fix for for #134534, portable sed usage.          (Laszlo Peter)
+* Updated translations:
+  ar      (Arafat Medini)
+  cs      (Miloslav Trmac)
+  en_GB   (Gareth Owen)
+  hu      (Andras Timar)
+  pa      (Amanpreet Singh Alam)
+  ro      (Mugurel Tudor)
+  ru      (Russian team)
+  sr      (Slobodan Sredojević)
+  sr@Latn (Slobodan Sredojević)
+  zh_CN   (jan2xue)
+
 Changes in 2.5.91:
 ------------------
 * Fix for #137216, infinite loop in tree traversal.    (Shaun McCance)
