--- a/po/ar.po
+++ b/po/ar.po
@@ -9,14 +9,14 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: yelp\n"
-"Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-03-17 04:23+0100\n"
+"POT-Creation-Date: 2004-03-22 17:51-0600\n"
 "PO-Revision-Date: 2004-03-17 13:23+0100\n"
 "Last-Translator: Arafat Medini <lumina@silverpen.de>\n"
 "Language-Team: Arabic <doc@arabeyes.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: 8bit"
+"Content-Transfer-Encoding: 8bit\n"
+"Report-Msgid-Bugs-To: \n"
 
 #: data/toc.xml.in.h:1
 msgid "Applets"
@@ -387,12 +387,10 @@ msgstr "جاري التحميل..."
 #. * will shop up in the "about" box
 #: src/yelp-window.c:1300
 msgid "translator_credits"
-msgstr "عرفات المديني، تونس <lumina@silverpen.de>"
-"محمد جمال، مصر "
-" محمد عصر، مصر "
-" سيد جعفر الموسوي، البحرين، "
-"عصام بيازيدي، الأردن "
-" نور الدين أمين آغة، العربية السعودية "
+msgstr ""
+"عرفات المديني، تونس <lumina@silverpen.de>محمد جمال، مصر  محمد عصر، مصر  سيد "
+"جعفر الموسوي، البحرين، عصام بيازيدي، الأردن  نور الدين أمين آغة، العربية "
+"السعودية "
 
 #: src/yelp-window.c:1306
 msgid "A Help Browser for GNOME"
