--- a/po/ro.po
+++ b/po/ro.po
@@ -6,14 +6,14 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: yelp.gnome-2-4.ro\n"
-"Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-03-21 20:26+0200\n"
+"POT-Creation-Date: 2004-03-22 17:51-0600\n"
 "PO-Revision-Date: 2004-03-21 20:24+0200\n"
 "Last-Translator: Mugurel Tudor <mugurelu@go.ro>\n"
 "Language-Team:  <@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Report-Msgid-Bugs-To: \n"
 
 #: data/toc.xml.in.h:1
 msgid "Applets"
