--- a/po/sr@Latn.po
+++ b/po/sr@Latn.po
@@ -9,14 +9,14 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: yelp 2.6\n"
-"Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-03-21 07:34+0100\n"
+"POT-Creation-Date: 2004-03-22 17:51-0600\n"
 "PO-Revision-Date: 2004-03-21 07:34+0100\n"
 "Last-Translator: Slobodan Sredojević <ssl@uns.ns.ac.yu>\n"
 "Language-Team: Serbian (sr) <gnom@prevod.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Report-Msgid-Bugs-To: \n"
 
 #: data/toc.xml.in.h:1
 msgid "Applets"
