--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-03-25  Andras Timar  <timar@gnome.hu>
+
+	* hu.po: Updated Hungarian translation.
+
 2004-03-22  Guntupalli Karunakar  <karunakar@freedomink.org>
 
         * pa.po: Punjabi translation by 
