--- a/po/hu.po
+++ b/po/hu.po
@@ -8,18 +8,18 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: yelp\n"
-"POT-Creation-Date: 2004-03-22 17:51-0600\n"
-"PO-Revision-Date: 2004-03-19 19:54+0100\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2004-03-23 04:21+0100\n"
+"PO-Revision-Date: 2004-03-25 17:56+0100\n"
 "Last-Translator: Laszlo Dvornik <dvornikl@mailbox.hu>\n"
 "Language-Team: Hungarian <translation-team-hu@lists.sourceforge.net>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Report-Msgid-Bugs-To: \n"
 
 #: data/toc.xml.in.h:1
 msgid "Applets"
-msgstr "Appletek"
+msgstr "Kisalkalmazások"
 
 #: data/toc.xml.in.h:2 src/yelp-man.c:429
 msgid "Applications"
