--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-03-28  Robert Sedak  <robert.sedak@sk.htnet.hr>
+
+	* hr.po: Updated Croatian translation.
+
 2004-03-25  Andras Timar  <timar@gnome.hu>
 
 	* hu.po: Updated Hungarian translation.
