--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2004-03-31  Christian Rose  <menthos@menthos.com>
+
+	* af.po: Added Afrikaans translation by
+	Zuza Software Foundation <info@translate.org.za>.
+
 2004-03-25  Andras Timar  <timar@gnome.hu>
 
 	* hu.po: Updated Hungarian translation.
