--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2004-04-03  Kenneth Rohde Christiansen  <kenneth@gnu.org>
+
+	* nds@NFE.po: Added draft translation into Low Saxon (Northern
+	Frisian Enclave). 
+
 2004-03-31  Alexander Shopov  <ash@contact.bg>
 
 	* bg.po: Updated Bulgarian tranlsation by
