--- a/po/is.po
+++ b/po/is.po
@@ -6,14 +6,14 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: yelp\n"
-"POT-Creation-Date: 2004-03-22 17:51-0600\n"
-"PO-Revision-Date: 2003-06-21 15:34--100\n"
-"Last-Translator: Samuel Jon Gunnarsson <sammi@techattack.nu>\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2004-04-04 01:47+0000\n"
+"PO-Revision-Date: 2004-03-13 06:35-0000\n"
+"Last-Translator: helgi <helgi@trance.is>\n"
 "Language-Team: Icelandic <gnome@techattack.nu>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Report-Msgid-Bugs-To: \n"
 
 #: data/toc.xml.in.h:1
 #, fuzzy
@@ -25,7 +25,6 @@ msgid "Applications"
 msgstr "Forrit"
 
 #: data/toc.xml.in.h:3
-#, fuzzy
 msgid "Desktop"
 msgstr "GNOME - Skjáborðið"
 
@@ -34,19 +33,16 @@ msgid "Development"
 msgstr "Þróun"
 
 #: data/toc.xml.in.h:5
-#, fuzzy
 msgid "Development Environments"
-msgstr "Þróun"
+msgstr "Þróunar Umhverfi"
 
 #: data/toc.xml.in.h:6
-#, fuzzy
 msgid "Development Tools"
-msgstr "Þróun"
+msgstr "Þróunar Tól"
 
 #: data/toc.xml.in.h:7 stylesheets/l10n.xml.in.h:36
-#, fuzzy
 msgid "Editors"
-msgstr "/Sýs_l"
+msgstr "Ritlar"
 
 #: data/toc.xml.in.h:8
 #, fuzzy
@@ -55,11 +51,11 @@ msgstr "Forrit"
 
 #: data/toc.xml.in.h:9
 msgid "Games and Entertainment"
-msgstr ""
+msgstr "Leikir og skemmtun"
 
 #: data/toc.xml.in.h:10
 msgid "General"
-msgstr ""
+msgstr "Almennt"
 
 #: data/toc.xml.in.h:11
 msgid "Help Contents"
@@ -72,7 +68,7 @@ msgstr "Forrit"
 
 #: data/toc.xml.in.h:13
 msgid "KDE"
-msgstr ""
+msgstr "KDE"
 
 #: data/toc.xml.in.h:14
 #, fuzzy
@@ -80,9 +76,8 @@ msgid "Kernels"
 msgstr "Kernel Routines"
 
 #: data/toc.xml.in.h:15
-#, fuzzy
 msgid "Multimedia Applications"
-msgstr "Forrit"
+msgstr "Margmiðlunar Forrit"
 
 #: data/toc.xml.in.h:16
 msgid "Office and Productivity Applications"
@@ -104,7 +99,7 @@ msgstr "System Calls"
 
 #: data/toc.xml.in.h:20
 msgid "Utilities"
-msgstr ""
+msgstr "Tól"
 
 #: data/toc.xml.in.h:21
 #, fuzzy
@@ -121,11 +116,11 @@ msgstr ""
 
 #: data/ui/yelp.glade.h:3
 msgid "Find"
-msgstr ""
+msgstr "Leita"
 
 #: data/ui/yelp.glade.h:4
 msgid "_Find: "
-msgstr ""
+msgstr "Leita:"
 
 #: data/ui/yelp.glade.h:5
 msgid "_Next"
@@ -153,7 +148,7 @@ msgstr ""
 
 #: src/yelp-db-pager.c:450 src/yelp-man-pager.c:316
 msgid "Out of memory"
-msgstr ""
+msgstr "Minnið er búið"
 
 #: src/yelp-db-pager.c:638 src/yelp-man-pager.c:370
 msgid "Titlepage"
@@ -168,7 +163,7 @@ msgstr "Innihald hjálpar"
 #: src/yelp-db-pager.c:658 stylesheets/l10n.xml.in.h:69
 #: src/yelp-man-pager.c:390
 msgid "Unknown"
-msgstr ""
+msgstr "Óþekkt"
 
 #: src/yelp-error.c:46
 #, fuzzy
@@ -435,7 +430,7 @@ msgstr ""
 
 #: stylesheets/l10n.xml.in.h:5
 msgid "About This Article"
-msgstr ""
+msgstr "Um Þessa Grein"
 
 #: stylesheets/l10n.xml.in.h:6
 msgid "About This Bibliography"
@@ -443,11 +438,11 @@ msgstr ""
 
 #: stylesheets/l10n.xml.in.h:7
 msgid "About This Book"
-msgstr ""
+msgstr "Um Þessa Bók"
 
 #: stylesheets/l10n.xml.in.h:8
 msgid "About This Chapter"
-msgstr ""
+msgstr "Um Þennan Kafla"
 
 #: stylesheets/l10n.xml.in.h:9
 msgid "About This Entry"
@@ -463,7 +458,7 @@ msgstr ""
 
 #: stylesheets/l10n.xml.in.h:12
 msgid "About This Part"
-msgstr ""
+msgstr "Um Þennan Part"
 
 #: stylesheets/l10n.xml.in.h:13
 msgid "About This Preface"
@@ -492,7 +487,7 @@ msgstr ""
 
 #: stylesheets/l10n.xml.in.h:19
 msgid "Article"
-msgstr ""
+msgstr "Grein"
 
 #: stylesheets/l10n.xml.in.h:20
 msgid "Audience"
@@ -500,11 +495,11 @@ msgstr ""
 
 #: stylesheets/l10n.xml.in.h:21
 msgid "Author"
-msgstr ""
+msgstr "Höfundur"
 
 #: stylesheets/l10n.xml.in.h:22
 msgid "Authors"
-msgstr ""
+msgstr "Höfundar"
 
 #: stylesheets/l10n.xml.in.h:23
 msgid "Bibliography"
@@ -512,7 +507,7 @@ msgstr ""
 
 #: stylesheets/l10n.xml.in.h:24
 msgid "Book"
-msgstr ""
+msgstr "Bók"
 
 #: stylesheets/l10n.xml.in.h:25
 msgid "Caution"
@@ -520,7 +515,7 @@ msgstr ""
 
 #: stylesheets/l10n.xml.in.h:26
 msgid "Chapter"
-msgstr ""
+msgstr "Kafli"
 
 #: stylesheets/l10n.xml.in.h:27
 msgid "Collaborator"
@@ -536,15 +531,15 @@ msgstr ""
 
 #: stylesheets/l10n.xml.in.h:31
 msgid "Copyright"
-msgstr ""
+msgstr "Höfundaréttur"
 
 #: stylesheets/l10n.xml.in.h:32
 msgid "Copyrights"
-msgstr ""
+msgstr "Höfundaréttir"
 
 #: stylesheets/l10n.xml.in.h:33
 msgid "Date"
-msgstr ""
+msgstr "Dagsetning"
 
 #: stylesheets/l10n.xml.in.h:34
 #, fuzzy
@@ -552,17 +547,16 @@ msgid "Dedication"
 msgstr "Deildir"
 
 #: stylesheets/l10n.xml.in.h:35
-#, fuzzy
 msgid "Editor"
-msgstr "/Sýs_l"
+msgstr "Ritill"
 
 #: stylesheets/l10n.xml.in.h:37
 msgid "Email"
-msgstr ""
+msgstr "Email"
 
 #: stylesheets/l10n.xml.in.h:38
 msgid "Example"
-msgstr ""
+msgstr "Dæmi"
 
 #: stylesheets/l10n.xml.in.h:39
 msgid "Figure"
@@ -574,7 +568,7 @@ msgstr ""
 
 #: stylesheets/l10n.xml.in.h:41
 msgid "Important"
-msgstr ""
+msgstr "Mikilvægt"
 
 #: stylesheets/l10n.xml.in.h:42
 msgid "Index"
@@ -626,11 +620,11 @@ msgstr ""
 
 #: stylesheets/l10n.xml.in.h:54
 msgid "Publisher"
-msgstr ""
+msgstr "Útgefandi"
 
 #: stylesheets/l10n.xml.in.h:55
 msgid "Publishers"
-msgstr ""
+msgstr "Útgefendur"
 
 #: stylesheets/l10n.xml.in.h:56
 msgid "Reference"
@@ -658,7 +652,7 @@ msgstr ""
 
 #: stylesheets/l10n.xml.in.h:63
 msgid "See Also"
-msgstr ""
+msgstr "Sjá einnig"
 
 #: stylesheets/l10n.xml.in.h:64
 #, fuzzy
@@ -667,7 +661,7 @@ msgstr "Spjaldskrá"
 
 #: stylesheets/l10n.xml.in.h:65
 msgid "Table"
-msgstr ""
+msgstr "Tafla"
 
 #: stylesheets/l10n.xml.in.h:66
 #, fuzzy
@@ -676,15 +670,15 @@ msgstr "Innihald hjálpar"
 
 #: stylesheets/l10n.xml.in.h:67
 msgid "Tip"
-msgstr ""
+msgstr "Ábending"
 
 #: stylesheets/l10n.xml.in.h:68
 msgid "Title"
-msgstr ""
+msgstr "Titill"
 
 #: stylesheets/l10n.xml.in.h:70
 msgid "Warning"
-msgstr ""
+msgstr "Aðvörun"
 
 #: yelp.desktop.in.h:1
 msgid "Get help with GNOME"
@@ -693,55 +687,3 @@ msgstr "Fá hjálp með GNOME"
 #: yelp.desktop.in.h:2
 msgid "Help"
 msgstr "Hjálp"
-
-#~ msgid "The document '%s' does not exist"
-#~ msgstr "þetta gagn '%s' fannst ekki"
-
-#~ msgid "<b>Find text in the document:</b>"
-#~ msgstr "<b>Finna texta í skjali:</b>"
-
-#~ msgid "Automatically _wrap around"
-#~ msgstr "Sjálfvirkt _línuumbrot"
-
-#~ msgid "Find text..."
-#~ msgstr "Finna texta..."
-
-#~ msgid "Match _entire word"
-#~ msgstr "Passa með _öllu orðinu"
-
-#~ msgid "_Match upper/lower case"
-#~ msgstr "_Passa með há/lág - stöfum"
-
-#~ msgid "_Search for:"
-#~ msgstr "_Leita eftir:"
-
-#~ msgid "GNOME - Desktop"
-#~ msgstr "GNOME - Skjáborðið"
-
-#~ msgid "Additional documents"
-#~ msgstr "Frekari hjálpargögn"
-
-#~ msgid "Manual Pages"
-#~ msgstr "Manual Síður"
-
-#~ msgid "Info Pages"
-#~ msgstr "Info Síður"
-
-#~ msgid "Manual pages"
-#~ msgstr "Manual síður"
-
-#~ msgid "GNOME is"
-#~ msgstr "GNOME er"
-
-#~ msgid "Free Software"
-#~ msgstr "Frjáls Hugbúnaður"
-
-#~ msgid "(C)"
-#~ msgstr "(C)"
-
-#, fuzzy
-#~ msgid "Loading..&nbsp;"
-#~ msgstr "Hleð..."
-
-#~ msgid "Search in the index"
-#~ msgstr "Leita í spjaldskrá"
