--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2004-04-04  Samúel Jón Gunnarsson  <sammi@techattack.nu>
+
+	* is.po: Updated Icelandic translation by
+	Helgi Þormar Þorbjörnsson  <helgi@trance.is>
+	
 2004-04-03  Kenneth Rohde Christiansen  <kenneth@gnu.org>
 
 	* nds@NFE.po: Added draft translation into Low Saxon (Northern
