--- a/po/th.po
+++ b/po/th.po
@@ -537,7 +537,7 @@ msgstr "บรรณาธิการ"
 
 #: stylesheets/l10n.xml.in.h:37
 msgid "Email"
-msgstr "อีเมล์"
+msgstr "อีเมล"
 
 #: stylesheets/l10n.xml.in.h:38
 msgid "Example"
