--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-04-15  Theppitak Karoonboonyanan  <thep@linux.thai.net>
+
+	* th.po: Fix spellings.
+
 2004-04-08  Guntupalli Karunakar  <karunakar@freedomink.org>
 
         * gu.po: Added Gujurati translation by
