Added Georgian file

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-04-24  Pablo Saratxaga  <pablo@mandrakesoft.com>
+
+	* configure.in: Added "ka" entry to ALL_LINGUAS.
+
 2004-02-13  Shaun McCance  <shaunm@gnome.org>
 
 	* src/yelp-index-model.c:
