--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-04-24  Pablo Saratxaga  <pablo@mandrakesoft.com>
+
+	* ka.po: Added Georgian file
+
 2003-12-10  Tõivo Leedjärv  <toivo@linux.ee>
 
 	* et.po: Updated Estonian translation
