Updated French translation.

--- a/po/fr.po
+++ b/po/fr.po
@@ -10,15 +10,15 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: yelp 2.5.6\n"
-"POT-Creation-Date: 2004-04-20 17:58-0500\n"
-"PO-Revision-Date: 2004-02-28 11:24+0100\n"
-"Last-Translator: Jean-Michel Ardantz <jmardantz@ifrance.com>\n"
+"Project-Id-Version: yelp 2.6.1\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2004-04-25 11:12+0200\n"
+"PO-Revision-Date: 2004-04-25 11:09+0200\n"
+"Last-Translator: Christophe Merlet (RedFox) <redfox@redfoxcenter.org>\n"
 "Language-Team: GNOME French Team <gnomefr@traduc.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Report-Msgid-Bugs-To: \n"
 
 #: data/toc.xml.in.h:1
 msgid "Applets"
@@ -114,11 +114,11 @@ msgstr "Sensible à la c_asse"
 
 #: data/ui/yelp.glade.h:3
 msgid "Find"
-msgstr "Chercher"
+msgstr "Rechercher"
 
 #: data/ui/yelp.glade.h:4
 msgid "_Find: "
-msgstr "_Chercher"
+msgstr "_Rechercher : "
 
 #: data/ui/yelp.glade.h:5
 msgid "_Next"
@@ -347,7 +347,7 @@ msgstr "/_Aide"
 
 #: src/yelp-window.c:290
 msgid "/Help/_About"
-msgstr "/Aide/À _propos..."
+msgstr "/Aide/À _propos"
 
 #: src/yelp-window.c:352
 msgid "Help Browser"
