Added Basque file

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-04-27  Pablo Saratxaga  <pablo@mandrakesoft.com>
+
+	* configure.in: Added Basque (eu) to ALL_LINGUAS.
+
 2004-04-26  Morten Welinder  <terra@gnome.org>
 
 	* src/yelp-window.c (window_handle_page): Fix the rest of #140595.
@@ -5,7 +9,7 @@
 	* src/yelp-db-pager.c (db_pager_process): Free path, free walker,
 	and free the transformed document.  (#140630)
 
-2003-01-15  Pablo Saratxaga  <pablo@mandrakesoft.com>
+2004-04-24  Pablo Saratxaga  <pablo@mandrakesoft.com>
 
 	* configure.in: Added Georgian (ka) to ALL_LINGUAS.
 
