--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-04-27  Pablo Saratxaga  <pablo@mandrakesoft.com>
+
+	* eu.po: Added Basque file
+
 2004-04-25  Christophe Merlet  <redfox@redfoxcenter.org>
 
 	* fr.po: Updated French translation.
