Added Georgian and Basque translations

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2004-04-27  Pablo Saratxaga  <pablo@mandrakesoft.com>
+
+	* eu.po: Added Basque file
+	* ka.po: Added Georgian file
+
 2004-04-25  Christophe Merlet  <redfox@redfoxcenter.org>
 
 	* fr.po: Updated French translation.
@@ -12,7 +17,7 @@
 
 2004-04-08  Guntupalli Karunakar  <karunakar@freedomink.org>
 
-        * gu.po: Added Gujurati translation by
+	* gu.po: Added Gujurati translation by
         Gujarati Team <magnet@magnet-i.com>.
 
 2004-04-04  Samúel Jón Gunnarsson  <sammi@techattack.nu>
