--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-04-27  Pablo Saratxaga  <pablo@mandrakesoft.com>
+
+	* configure.in: Added Basque (eu) end Georgian (ka),
+	to ALL_LINGUAS
+
 2004-04-26  Morten Welinder  <terra@gnome.org>
 
 	* src/yelp-window.c (window_handle_page): Fix the rest of #140595.
@@ -269,7 +274,7 @@
 	* stylesheets/db2html-xref.xsl:
 	- Fixed blatently wrong grabbing of text content for ulink.
 
-2004-02-05  Tomasz K³oczko <kloczek@pld.org.pl>
+2004-02-05  Tomasz KÅ‚oczko <kloczek@pld.org.pl>
 
 	* configure.in: Trivial cleanup: remove AC_SUBST(CFLAGS)
 	  and AC_SUBST(LDFLAGS). This variables are substed by default.
