- Fixed the XPath on the db.chunk.toc_basename select
* stylesheets/db2html.xsl:
* stylesheets/db2html.xsl.in:
- Fixed the XPath on the db.chunk.toc_basename select

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2004-06-04  Shaun McCance  <shaunm@gnome.org>
 
+	* stylesheets/db2html.xsl:
+	* stylesheets/db2html.xsl.in:
+	- Fixed the XPath on the db.chunk.toc_basename select
+
+2004-06-04  Shaun McCance  <shaunm@gnome.org>
+
 	* src/yelp-toc-pager.c:
 	- s/scrollkeeper\//scrollkeeper./ just for fun
 
